hive：支持传入地址运行，不需要再修改代码